0.98_03
    New Features
    * cmp_ok() will error when used with something which is not a
      comparison operator, including =, += and the like.
      [github 141]

    Bug Fixes
    * use_ok() was calling class->import without quoting which could
      cause problems if "class" is also a function.


0.98_02  Thu Nov 24 01:13:53 PST 2011
    Bug Fixes
    * use_ok() in 0.98_01 was leaking pragmas from inside Test::More.
      This looked like Test::More was forcing strict. [rt.cpan.org 67538]
      (Father Chrysostomos)


0.98_01  Tue Nov  8 17:07:58 PST 2011
    Bug Fixes
    * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
    * subtests now work with threads turned on. [github #145]

    Feature Changes
    * use_ok() will now apply lexical effects. [rt.cpan.org 67538]
      (Father Chrysostomos)

    Misc
    * Test::More, Test::Simple and Test::Builder::Module now require
      a minimum version of Test::Builder.  This avoids Test::More and
      Test::Builder from getting out of sync. [github #89]


0.98  Wed, 23 Feb 2011 14:38:02 +1100
    Bug Fixes
    * subtest() should not fail if $? is non-zero. (Aaron Crane)

    Docs
    * The behavior of is() and undef has been documented. (Pedro Melo)


0.97_01  Fri Aug 27 22:50:30 PDT 2010
    Test Fixes
    * Adapted the tests for the new Perl 5.14 regex stringification.
      (Karl Williamson) [github 44]

    Doc Fixes
    * Document how to test "use Foo ()". (Todd Rinaldo) [github 41]

    Feature Changes
    * subtest() no longer has a prototype.  It was just getting in the way.
      [rt.cpan.org 54239]
    * The filehandles used by default will now inherit any filehandle
      disciplines from STDOUT and STDERR IF AND ONLY IF they were applied
      before Test::Builder is loaded.  More later. [rt.cpan.org 46542]


0.96  Tue Aug 10 21:13:04 PDT 2010
    Bug Fixes
    * You can call done_testing() again after reset() [googlecode 59]

    Other
    * Bug tracker moved to github

