@@ -144,7 +144,6 @@ t/threads.t
 t/todo.t
 t/undef.t
 t/use_ok.t
-t/use_ok_leaking.t
 t/useing.t
 t/utf8.t
 t/versions.t
